[gd_scene load_steps=9 format=3 uid="uid://bl7cilkjig720"]

[ext_resource type="Script" uid="uid://ryhfgejho7sc" path="res://scripts/chest.gd" id="1_mpi43"]
[ext_resource type="Texture2D" uid="uid://dedbej2ca0f80" path="res://resources/animated_chest_texture.tres" id="2_cllh0"]
[ext_resource type="AudioStream" uid="uid://clqxv8lrce14d" path="res://assets/sfx/ES_Yahtzee, Box, Open - Epidemic Sound.ogg" id="3_cllh0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_blxll"]
radius = 10.834618

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpi43"]
size = Vector2(14, 13)

[sub_resource type="Animation" id="Animation_blxll"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_167q1"]
resource_name = "open_chest"
length = 2.0
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oa4yr"]
_data = {
&"RESET": SubResource("Animation_blxll"),
&"open_chest": SubResource("Animation_167q1")
}

[node name="Chest" type="Area2D" groups=["chest"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_mpi43")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("2_cllh0")
hframes = 3

[node name="DetectionArea" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_blxll")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_mpi43")
debug_color = Color(0.96, 0, 0.5279997, 0.32941177)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_oa4yr")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cllh0")
volume_db = -8.0
bus = &"sfx"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_exited" from="." to="." method="_on_area_exited"]
